--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@
 
 ## Generated if empty string is given at "Please type another file name for output:"
 report.pdf
+work.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
