--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-## Environment seupt:
+## Environment setup:
 .direnv
+
+## Lockfiles
+.~lock*
 
 ## Core latex/pdflatex auxiliary files:
 *.aux
@@ -26,6 +29,7 @@
 
 ## Generated if empty string is given at "Please type another file name for output:"
 report.pdf
+work.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
